--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ numpy==1.25.2
 numpy==1.24.3
 pandas==1.5.3
 scikit-learn==1.5.0
-setuptools>=58.0.0
-setuptools
-wheel
-setuptools.distutils
+setuptools==58.0.0
+setuptools==65.5.1
+wheel==0.41.0
